[gd_scene load_steps=12 format=3 uid="uid://dfia88nbbflen"]

[ext_resource type="Texture2D" uid="uid://u82qck576bsb" path="res://scenes/ability/poison_vial_ability/poison_vial.png" id="1_hyp8g"]
[ext_resource type="Script" path="res://scenes/ability/poison_vial_ability/poison_vial_ability.gd" id="1_ss1e1"]
[ext_resource type="PackedScene" uid="uid://c7883sj4drkd6" path="res://scenes/ability/poison_vial_ability/circle_cloud_gpu_particles.tscn" id="2_osddj"]
[ext_resource type="PackedScene" uid="uid://di7ix0nfu8s1c" path="res://scenes/ability/poison_vial_ability/poison_skull_gpu_particles.tscn" id="3_dyjek"]
[ext_resource type="PackedScene" uid="uid://c5mt23ottkc5y" path="res://scenes/component/hit_box_component.tscn" id="5_do85w"]

[sub_resource type="Animation" id="Animation_efflj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_2dk4u"]
resource_name = "spin"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6iwdq"]
_data = {
"RESET": SubResource("Animation_efflj"),
"spin": SubResource("Animation_2dk4u")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_sm5u8"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6010j"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wixx5"]
radius = 60.0

[node name="PoisonVialAbility" type="RigidBody2D"]
collision_layer = 0
collision_mask = 8
gravity_scale = 0.05
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_ss1e1")
circle_particle_scene = ExtResource("2_osddj")
skull_particle_scene = ExtResource("3_dyjek")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spin"
libraries = {
"": SubResource("AnimationLibrary_6iwdq")
}

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_hyp8g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sm5u8")

[node name="HitBoxComponent" parent="." instance=ExtResource("5_do85w")]
collision_mask = 8
base_damage = 1.0

[node name="CollisionShape" type="CollisionShape2D" parent="HitBoxComponent"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_6010j")

[node name="SlowBoxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlowBoxComponent"]
shape = SubResource("CircleShape2D_wixx5")

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="WorkingTimer" type="Timer" parent="."]
wait_time = 6.0
